--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,75 @@
-.App {
-  text-align: center;
+html {
+    background: #333;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+#root {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.loading {
+    width: 100px;
+    color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container form {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    width: 600px;
+    justify-content: space-between;
+}
+
+.container form button {
+    width: 100px;
+    height: 50px;
+    border: 0;
+    border-radius: 10px;
+    outline: none;
+    transition: .2s;
+}
+
+.container form button:hover {
+    background: #666;
+    cursor: pointer;
+}
+
+.container input {
+    width: 450px;
+    height: 50px;
+    border-radius: 10px;
+    border: 0;
+    outline: none;
+    padding: 0 10px;
+    font-size: 20px;
+}
+
+.comic-thumbnail {
+    width: 200px;
+}
+
+.comics {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center
+}
+
+.comic {
+    padding: 20px;
+    width: 200px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
 }
